--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,26 @@
+@use '~@angular/material' as mat;
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$catalogo-primary: mat-palette($mat-indigo);
-$catalogo-accent: mat-palette($mat-blue, 700);
+$catalogo-primary: mat.define-palette(mat.$indigo-palette);
+$catalogo-accent: mat.define-palette(mat.$blue-palette, 700);
 
 // The warn palette is optional (defaults to red).
-$catalogo-warn: mat-palette($mat-red, 700);
+$catalogo-warn: mat.define-palette(mat.$red-palette, 700);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$catalogo-theme: mat-light-theme((
+$catalogo-theme: mat.define-light-theme((
   color: (
     primary: $catalogo-primary,
     accent: $catalogo-accent,
@@ -31,7 +31,7 @@ $catalogo-theme: mat-light-theme((
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($catalogo-theme);
+@include mat.all-component-themes($catalogo-theme);
 
 /* You can add global styles to this file, and also import other style files */
 :root {
